--- a/node-6.2.1-dev/Dockerfile
+++ b/node-6.2.1-dev/Dockerfile
@@ -5,13 +5,21 @@ RUN git config --global alias.st status \
  && git config --global alias.ci commit \
  && git config --global alias.br branch
 
-RUN apt-get update
+##################
+# Install software
+##################
 
-# Install Oh My Zsh
-RUN apt-get install -y zsh \
- && git clone git://github.com/robbyrussell/oh-my-zsh.git ~/.oh-my-zsh \
- && cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc \
- && chsh -s /bin/zsh
+RUN apt-get update \
+
+&& apt-get install -y vim \
+
+# Oh My Zsh
+&& apt-get install -y zsh \
+&& git clone git://github.com/robbyrussell/oh-my-zsh.git ~/.oh-my-zsh \
+&& cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc \
+&& chsh -s /bin/zsh
+
+##################
 
 WORKDIR /usr/src/app
 
